crates/runtime/tests/snapshots/fn_call_default__default_pos.snap
---
source: crates/vm/tests/fn_call_default.rs
expression: snapshot
---
# Input:
fn f(a=10):
  print a

f()
f(1)


# Result (success):
none

# Stdout:
10
1

