crates/runtime/tests/snapshots/fn_call_default__pos_and_default_pos_not_enough_args.snap
---
source: crates/runtime/tests/fn_call_default.rs
expression: snapshot
---
# Input:
fn f(a, b=10):
  print a

f()


# Result (error):
In test_func at 0..0
Error: missing required positional params: a


# Stdout:

